# dashboard_weather

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-force-rebuild.sh  entrypoint.sh  hermes-verify-header-location.sh  main.py  pyproject.toml  setup-kiosk.sh
dashboard_weather/: __init__.py  config.py  fallbacks.py  models.py  weather_codes.py
dashboard_weather/clients/: dipul_news.py  dipul_wms.py  hiorg_events.py  laminardata_notam.py  mosel_stage.py  nina_alerts.py  open_meteo.py  water_portal.py
dashboard_weather/services/: dashboard.py
dashboard_weather/web/: app.py
dashboard_weather/web/static/css/: style.css
dashboard_weather/web/static/js/: dashboard.js
dashboard_weather/web/templates/: index.html
kiosk/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  launch-kiosk.sh  launch-native-kiosk.sh  setup-kiosk.sh  setup-pi-kiosk.sh
src/dashboard_weather/: cache.py  config.py  main.py  models.py
src/dashboard_weather/clients/: dipul_wms.py  open_meteo.py
src/dashboard_weather/web/: app.py
src/dashboard_weather/web/static/js/: dashboard.js
src/dashboard_weather/web/templates/: index.html
tests/: conftest.py  test_mosel_stage.py  test_readme_update.py
