[project]
name = "dashboard-weather"
version = "0.1.0"
description = "Weather and drone operations dashboard for Trier, Germany"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "dotenv>=0.9.9,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "jinja2>=3.1,<4",
    "uvicorn[standard]>=0.34,<1",
    "dashboard-weather",
]

[project.scripts]
dashboard-weather = "dashboard_weather.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dashboard_weather"]

[tool.hatch.build.targets.sdist]
include = ["dashboard_weather"]

[tool.uv.sources]
dashboard-weather = { path = ".", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.8,<1",
]
