[project]
name = "dashboard-weather"
version = "0.1.0"
description = "Weather and drone operations dashboard for Trier, Germany"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "dotenv>=0.9.9,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "jinja2>=3.1,<4",
    "requests>=2.31,<3",
    "uvicorn[standard]>=0.34,<1",
    "dashboard-weather",
]

[project.scripts]
dashboard-weather = "dashboard_weather.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dashboard_weather"]

[tool.hatch.build.targets.sdist]
include = ["dashboard_weather"]

[tool.uv.sources]
dashboard-weather = { path = ".", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["dashboard_weather"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.8,<1",
]
